PI-261 (#693)